Added 'includes'. Added data for the nav items. Added more pages.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Test</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="noindex, nofollow">
-    <link rel="stylesheet" href="/css/screen.css">
-  </head>
-  <body>
+---
+layout: default
+title: Index page
+---
 
-    <p>Hello world!</p>
-
-  </body>
-</html>
+<p>Index page</p>
