Added content for the index page.

--- a/index.html
+++ b/index.html
@@ -3,4 +3,26 @@ layout: default
 title: Index page
 ---
 
-<p>Index page</p>
+<article>
+  <div class="content">
+    <header>
+      <h1>Hello. My name is <em>Svetlana Nikitina</em>.</h1>
+      <p>I am a <em>front-end</em> web-developer with <em>5 years</em> of experience. I am looking for a full-time position in <em>Sydney</em>, Australia, and I am also considering freelance jobs <em>worldwide</em>.</p>
+    </header>
+    <p>My qualifications are:</p>
+    <ul>
+      <li>Standards-compliant HTML/XHTML and CSS </li>
+      <li>JavaScript experience (including jQuery, Prototype and Mochikit libraries and Ajax techniques)</li>
+      <li>Strong understanding of web programming and back-end technologies</li>
+      <li>Implementation of cross-browser/cross-platform solutions </li>
+      <li>Purely semantic coding</li>
+      <li>Application of progressive enhancement &amp; graceful degradation strategies with respect to Web accessibility</li>
+      <li>Designing user interfaces with the focus on usability</li>
+      <li>High attention to detail and ability to create pixel-perfect interfaces</li>
+    </ul>
+    <p>Please feel free to contact me via <a href="#">email</a> or <a href="#">skype</a>.</p>
+  </div>
+  <aside>
+    Recent projects
+  </aside>
+</article>
