Added styles for the recent projects' sidebar. Fixed the previous commit.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,24 @@ title: Index page
 </article>
 <aside>
   <h3><span>Recent projects</span></h3>
-  <div>
-    Grumpy wizards make toxic brew for the evil Queen and Jack. Grumpy wizards make toxic brew for the evil Queen and Jack. Grumpy wizards make toxic brew for the evil Queen and Jack. Grumpy wizards make toxic brew for the evil Queen and Jack. Grumpy wizards make toxic brew for the evil Queen and Jack.<br /><br />
+  <div id="recent-projects">
+    <ul>
+      <li>
+        <a href="#">
+          <img src="/img/projects/kiss/opportunities.png" alt="" />
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="/img/projects/portal/student_profile.png" alt="" />
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="/img/projects/mojeid/mojeid_web_big.png" alt="" />
+        </a>
+      </li>
+    </ul>
+    <a href="#" class="button">Full portofilo</a>
   </div>
-  <h3><span>Contact</span></h3>
 </aside>
