Added the first styles for resume.

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,4 +4,10 @@ title: Portfolio
 permalink: /portfolio/
 ---
 
-<p>Portfolio</p>
+
+<article>
+  <header><h1><em>Portfolio</em></h1></header>
+  <div>Projects
+  </div>
+</article>
+
