--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Index page
     <h1>Hello. My name is <em>Svetlana Nikitina</em>.</h1>
     <p>I am a <em>front-end</em> web-developer with <em>5 years</em> of experience. I am looking for a full-time position in <em>Sydney</em>, Australia, and I am also considering freelance jobs <em>worldwide</em>.</p>
   </header>
-  <div>
+  <div id="qualifications">
     <p>My qualifications are:</p>
     <ul>
       <li>Standards-compliant HTML/XHTML and CSS </li>
@@ -19,6 +19,10 @@ title: Index page
       <li>Application of progressive enhancement &amp; graceful degradation strategies with respect to Web accessibility</li>
       <li>Designing user interfaces with the focus on usability</li>
       <li>High attention to detail and ability to create pixel-perfect interfaces</li>
+      <li>Standards-compliant HTML/XHTML and CSS </li>
+      <li>JavaScript experience (including jQuery, Prototype and Mochikit libraries and Ajax techniques)</li>
+      <li>Strong understanding of web programming and back-end technologies</li>
+      <li>Implementation of cross-browser/cross-platform solutions </li>
     </ul>
     <p class="bigger">Please feel free to contact me via <a href="#">email</a> or <a href="#">skype</a>.</p>
   </div>
