Added the rest of the jobs. Styled the resume page.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@ title: Index page
       <li>Application of progressive enhancement &amp; graceful degradation strategies with respect to Web accessibility</li>
       <li>Designing user interfaces with the focus on usability</li>
       <li>High attention to detail and ability to create pixel-perfect interfaces</li>
-      <li>Standards-compliant HTML/XHTML and CSS </li>
-      <li>JavaScript experience (including jQuery, Prototype and Mochikit libraries and Ajax techniques)</li>
-      <li>Strong understanding of web programming and back-end technologies</li>
-      <li>Implementation of cross-browser/cross-platform solutions </li>
     </ul>
-    <p class="bigger">Please feel free to contact me via <a href="#">email</a> or <a href="#">skype</a>.</p>
+    <p class="bigger">Please feel free to contact me:</p>
+    <ul class="no-bullets contact-list">
+      <li><span class="icon-mail"></span><a href="mailto:s.a.nikitina@gmail.com">s.a.nikitina [at] gmail.com</a></li>
+      <li><span class="icon-mobile"></span>+61 1234 56789</li>
+      <li><span class="icon-skype"></span><a href="skype:s.a.nikitina">s.a.nikitina</a></li>
+      <li><span class="icon-linkedin"></span><a href="http://www.linkedin.com/in/svetlananikitina">svetlananikitina</a></li>
+    </ul>
   </div>
 </article>
 <aside>
