--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@ title: Resume
 permalink: /resume/
 ---
 
-<article>
+<article id="resume">
   <header><h1><em>Resume</em></h1></header>
   <div>
     
@@ -52,9 +52,31 @@ permalink: /resume/
         {% endfor %}
       </ul>
     </section>
+    <section>
+      <h3>Applications and Technologies</h3>
+      <ul>
+        <li>Programming languages — Python, PHP, JavaScript</li>
+        <li>Web and JavaScript frameworks — Django, Ruby on Rails, jQuery, Mochikit, Prototype</li>
+        <li>DBMS — MySQL, Postgresql</li>
+        <li>Graphic editors — Adobe Photoshop, GIMP</li>
+        <li>Version control system — Git, Mercurial, SVN</li>
+        <li>Development environment — Sublime, Textmate, IntelliJ IDEA, Eclipse</li>
+        <li>User experience — MacOS, Linux (Ubuntu), Windows</li>
+      </ul>
+    </section>
+    <section>
+      <h3>Languages</h3>
+      <ul>
+        <li>English (fluent)</li>
+        <li>Russian (native)</li>
+        <li>German (basic)</li>
+        <li>Czech (basic)</li>
+      </ul>
+    </section>
   </div>
 </article>
 <aside>
+  <div id="resume-aside">
   <h3><span>PDF Version</span></h3>
   <div>My resume is also available in PDF format.</div><br />
   <div style="text-align: center;">
@@ -63,8 +85,11 @@ permalink: /resume/
   <br />
   <h3><span>Contact</span></h3>
   <div>
-    <p><a href="#">s.a.nikitina [at] gmail.com</a></p>
-    <p><a href="#">s.a.nikitina</a></p>
-    <p><a href="#">Linkedin</a></p>
-  </div>
+    <ul class="no-bullets contact-list">
+      <li><span class="icon-mail"></span><a href="mailto:s.a.nikitina@gmail.com">s.a.nikitina [at] gmail.com</a></li>
+      <li><span class="icon-mobile"></span>+61 1234 56789</li>
+      <li><span class="icon-skype"></span><a href="skype:s.a.nikitina">s.a.nikitina</a></li>
+      <li><span class="icon-linkedin"></span><a href="http://www.linkedin.com/in/svetlananikitina">svetlananikitina</a></li>
+    </ul>
+  </div></div>
 </aside>
