Refactoring: the layouts and common styles.

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,4 +3,11 @@ layout: default
 title: Contact
 ---
 
-<p>Contact</p>
+<article>
+  <header>
+    <h1><em>Contact</em></h1>
+  </header>
+  <div>
+    {% include contact_list.html %}
+  </div>
+</article>
