--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,8 +5,9 @@ title: Portfolio
 
 
 <article>
-  <header><h1><em>Portfolio</em></h1></header>
-  <div>Projects
-  </div>
+  <header>
+    <h1><em>Portfolio</em></h1>
+  </header>
+  <div>Projects</div>
 </article>
 
