Changed the wording for index page.

--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@ title: Index page
 
   <header>
     <h1>Hello. My name is <em>Svetlana Nikitina</em>.</h1>
-    <p>I am a <em>front-end</em> web-developer with <em>5 years</em> of experience. I am looking for a full-time position in <em>Sydney</em>, Australia, and I am also considering freelance jobs <em>worldwide</em>.</p>
   </header>
 
   <div id="qualifications">
+    <p>I am a <em>front-end</em> web-developer with <em>7 years</em> of experience. I am looking for a full-time position in <em>Sydney</em>.</p>
+    <p>I have <em>permanent residency in Australia</em>, so no work permit is required.</p>
     <p>My qualifications are:</p>
-    <ul>
-      <li>Standards-compliant HTML/XHTML and CSS </li>
-      <li>JavaScript experience (including jQuery, Prototype and Mochikit libraries and Ajax techniques)</li>
-      <li>Strong understanding of web programming and back-end technologies</li>
-      <li>Implementation of cross-browser/cross-platform solutions </li>
-      <li>Purely semantic coding</li>
-      <li>Application of progressive enhancement &amp; graceful degradation strategies with respect to Web accessibility</li>
-      <li>Designing user interfaces with the focus on usability</li>
+    <ul class="green-bullets">
+      <li><strong>HTML5/XHTML</strong> (standards-compliant)</li>
+      <li><strong>CSS3</strong> and CSS preprocessors (<strong>SASS</strong>)</li> 
+      <li><strong>JavaScript</strong> (<strong>jQuery</strong>, jQuery UI, DataTables, etc.)</li>
+      <li><strong>Web frameworks</strong> (<strong>Django</strong>)</li>
+      <li><strong>Git</strong>, <strong>Mercurial</strong>, <strong>SVN</strong></li>
+      <li><strong>Adobe Photoshop</strong>, <strong>GIMP</strong></li>
+      <li><strong>Cross-browser/cross-platform</strong> solutions</li>
+      <li><strong>Semantic coding</strong> (most of the time ;)</li>
+      <li><strong>Accessibility</strong>, progressive enhancement &amp; graceful degradation</li>
+      <li>Designing user interfaces with a focus on <strong>usability</strong></li>
       <li>High attention to detail and ability to create pixel-perfect interfaces</li>
     </ul>
     <p class="bigger">Please feel free to contact me:</p>
@@ -49,7 +53,7 @@ title: Index page
         </a>
       </li>
     </ul>
-    <a href="#" class="button">Full portofilo</a>
+    <div><a href="/portfolio/" class="button">Full portofilo</a></div>
   </section>
 
 </aside>
