--- a/resume/index.html
+++ b/resume/index.html
@@ -76,7 +76,7 @@ title: Resume
       <h3><span>PDF Version</span></h3>
       <p>My resume is also available in PDF format.</p>
       <div class="button-block">
-        <a href="#" class="button">Download PDF version</a>
+        <a href="/resume/Svetlana%20Nikitina%20-%20Front-end%20web-developer%20-%20CV.pdf" class="button">Download PDF version</a>
       </div>
     </section>
     <section>
