--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,7 @@ title: Resume
             <div class="resume-item-data">
               <strong>{{ job.company }}</strong>
               {% if job.location %}<em>{{ job.location }}</em>{% endif %}
-              <span>{{ job.started|date:"%b, %Y" }} &mdash; {{ job.finished|date:"%b, %Y" }}</span>
+              <span>{{ job.started|date:"%b %Y" }} &mdash; {{ job.finished|date:"%b %Y" }}</span>
             </div>
             {% if job.desc %}
               <p>{{ job.desc }}</p>
@@ -46,7 +46,7 @@ title: Resume
             <div class="resume-item-data">
               <strong>{{ item.uni }}</strong>
               <em>{{ item.location }}</em>
-              <span>{{ item.started|date:"%b, %Y" }} &mdash; {{ item.finished|date:"%b %Y" }}</span>
+              <span>{{ item.started|date:"%b %Y" }} &mdash; {{ item.finished|date:"%b %Y" }}</span>
             </div>
             <div class="resume-item-desc">
               <ul class="no-bullets">
@@ -63,7 +63,7 @@ title: Resume
     <section>
       <h3>Command of English</h3>
       <ul>
-        <li>Fluent: IELTS 8.0 out of 9.0</li>
+        <li><strong>Fluent</strong>: IELTS 8 out of 9</li>
         <li>Professional communication in English: 5 years</li>
       </ul>
     </section>
