Fixed the styles for the 'recent projects' block.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@ title: Index page
       <li><strong>HTML5/XHTML</strong> (standards-compliant)</li>
       <li><strong>CSS3</strong> and CSS preprocessors (<strong>SASS</strong>)</li> 
       <li><strong>JavaScript</strong> (<strong>jQuery</strong>, jQuery UI, DataTables, etc.)</li>
-      <li><strong>Web frameworks</strong> (<strong>Django</strong>)</li>
+      <li>Server-side <strong>MVC frameworks</strong> (<strong>Django</strong>)</li>
       <li><strong>Git</strong>, <strong>Mercurial</strong>, <strong>SVN</strong></li>
+      <li><strong>Agile development</strong> processes and practices</li>
       <li><strong>Adobe Photoshop</strong>, <strong>GIMP</strong></li>
       <li><strong>Cross-browser/cross-platform</strong> solutions</li>
-      <li><strong>Semantic coding</strong> (most of the time ;)</li>
+      <li><strong>Semantic coding</strong> most of the time ;)</li>
       <li><strong>Accessibility</strong>, progressive enhancement &amp; graceful degradation</li>
       <li>Designing user interfaces with a focus on <strong>usability</strong></li>
-      <li>High attention to detail and ability to create pixel-perfect interfaces</li>
+      <!-- <li>High attention to detail and ability to create pixel-perfect interfaces</li> -->
     </ul>
     <p class="bigger">Please feel free to contact me:</p>
     {% include contact_list.html %}
@@ -38,18 +39,18 @@ title: Index page
     <h3><span>Recent projects</span></h3>
     <ul>
       <li>
-        <a href="#">
-          <img src="/img/projects/kiss/opportunities.png" alt="" />
+        <a href="/portfolio/#studiportal">
+          <img src="/img/projects/portal/portal.png" alt="STUDITEMPS portal" />
         </a>
       </li>
       <li>
-        <a href="#">
-          <img src="/img/projects/portal/student_profile.png" alt="" />
+        <a href="/portfolio/#mojeid">
+          <img src="/img/projects/mojeid/mojeid.png" alt="MojeID" />
         </a>
       </li>
       <li>
-        <a href="#">
-          <img src="/img/projects/mojeid/mojeid_web_big.png" alt="" />
+        <a href="/portfolio/#kiss">
+          <img src="/img/projects/kiss/kiss.png" alt="KISS ERP system" />
         </a>
       </li>
     </ul>
