Renamed 'resume' to 'cv'.

--- a/cv/index.html
+++ b/cv/index.html
@@ -1,11 +1,11 @@
 ---
 body_id: resume
 layout: two_columns
-title: Resume
+title: CV
 ---
 
 <article>
-  <header><h1><em>Resume</em></h1></header>
+  <header><h1><em>Curriculum vitae</em></h1></header>
   <div>
     <section>
       <h3>Status in Australia</h3>
@@ -74,7 +74,7 @@ title: Resume
   <div id="resume-aside">
     <section>
       <h3><span>PDF Version</span></h3>
-      <p>My resume is also available in PDF format.</p>
+      <p>My CV is also available in PDF format.</p>
       <div class="button-block">
         <a href="/resume/Svetlana%20Nikitina%20-%20Front-end%20web-developer%20-%20CV.pdf" class="button">Download PDF version</a>
       </div>
