--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: two_columns
     <ul class="green-bullets">
       <li><strong>HTML5/XHTML</strong> (standards-compliant)</li>
       <li><strong>CSS3</strong> and CSS preprocessors (<strong>SASS</strong>)</li> 
-      <li><strong>JavaScript</strong> (<strong>jQuery</strong>, jQuery UI, DataTables, etc.)</li>
+      <li><strong>JavaScript</strong> (<strong>jQuery</strong>, jQuery UI, Bootstrap), including <strong>Ajax</strong> techniques</li>
       <li>Server-side <strong>MVC frameworks</strong> (<strong>Django</strong>)</li>
       <li><strong>Git</strong>, <strong>Mercurial</strong>, <strong>SVN</strong></li>
       <li><strong>Agile development</strong> processes and practices</li>
