Fixed the broken link to the CV PDF file.

--- a/cv/index.html
+++ b/cv/index.html
@@ -76,7 +76,7 @@ title: CV
       <h3><span>PDF Version</span></h3>
       <p>My CV is also available in PDF format.</p>
       <div class="button-block">
-        <a href="/resume/Svetlana%20Nikitina%20-%20Front-end%20web-developer%20-%20CV.pdf" class="button">Download PDF version</a>
+        <a href="/cv/Svetlana%20Nikitina%20-%20Front-end%20web-developer%20-%20CV.pdf" class="button">Download PDF version</a>
       </div>
     </section>
     <section>
