Made the index page responsive.

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@ layout: two_columns
     <ul>
       <li>
         <a href="/portfolio/#studiportal">
-          <img src="/img/projects/portal/portal.png" alt="STUDITEMPS portal" />
+          <img src="/img/projects/portal/student_profile_responsive_small.png" alt="STUDITEMPS portal" />
         </a>
       </li>
       <li>
         <a href="/portfolio/#mojeid">
-          <img src="/img/projects/mojeid/mojeid.png" alt="MojeID" />
+          <img src="/img/projects/mojeid/mojeid_responsive.png" alt="MojeID" />
         </a>
       </li>
       <li>
         <a href="/portfolio/#kiss">
-          <img src="/img/projects/kiss/kiss.png" alt="KISS ERP system" />
+          <img src="/img/projects/kiss/dashboard_responsive.png" alt="KISS ERP system" />
         </a>
       </li>
     </ul>
