Show the recent projects as 2x2 table for 500-640 pixel-wide devices.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@ layout: two_columns
           <img src="/img/projects/kiss/dashboard_responsive.png" alt="KISS ERP system" />
         </a>
       </li>
+      <li>
+        <a href="/portfolio/#cms">
+          <img src="/img/projects/csirt/about_responsive.png" alt="CSIRT.CZ Website" />
+        </a>
+      </li>
     </ul>
     <div><a href="/portfolio/" class="button">Full portofilo</a></div>
   </section>
