Altered the wording on the index page (qualifications).

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: two_columns
       <li><strong>Git</strong>, <strong>Mercurial</strong>, <strong>SVN</strong></li>
       <li><strong>Agile development</strong> processes and practices</li>
       <li><strong>Adobe Photoshop</strong>, <strong>GIMP</strong></li>
-      <li><strong>Cross-browser/cross-platform</strong> solutions</li>
+      <li><strong>Cross-browser/cross-platform</strong> solutions and <strong>responsive</strong> web design</li>
       <li><strong>Semantic coding</strong> most of the time ;)</li>
       <li><strong>Accessibility</strong>, progressive enhancement &amp; graceful degradation</li>
       <li>Designing user interfaces with a focus on <strong>usability</strong></li>
