--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@ layout: two_columns
   </header>
 
   <div id="qualifications">
-    <p>I am a <em>front-end</em> web-developer with <em>7 years</em> of experience. I am looking for a full-time position in <em>Sydney</em>.</p>
+    <p>I am a <em>front-end</em> web-developer with <em>7 years</em> of experience.</p>
     <p>I have <em>permanent residency in Australia</em>, so no work permit is required.</p>
     <p>My qualifications are:</p>
     <ul class="green-bullets">
       <li><strong>HTML5/XHTML</strong> (standards-compliant)</li>
-      <li><strong>CSS3</strong> and CSS preprocessors (<strong>SASS</strong>)</li> 
-      <li><strong>JavaScript</strong> (<strong>jQuery</strong>, jQuery UI, etc.), including <strong>Ajax</strong> techniques</li>
-      <li>Server-side <strong>MVC frameworks</strong> (<strong>Django</strong>)</li>
+      <li><strong>CSS3</strong> and CSS preprocessors (<strong>SASS</strong>, <strong>Compass</strong>)</li>
+      <li><strong>JavaScript</strong> (<strong>jQuery</strong>, jQuery UI, etc.), including <strong>Ajax</strong> techniques and <strong>CoffeeScript</strong></li>
+      <li>Server-side <strong>MVC frameworks</strong> (<strong>Django</strong>, <strong>Ruby on Rails</strong>)</li>
+      <li>Test-driven development with <strong>Jasmine</strong></li>
       <li><strong>Git</strong>, <strong>Mercurial</strong>, <strong>SVN</strong></li>
       <li><strong>Agile development</strong> processes and practices</li>
       <li><strong>Adobe Photoshop</strong>, <strong>GIMP</strong></li>
