Fixed some typos.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: two_columns
 
   <div id="qualifications">
     <p>I am a <em>front-end</em> web-developer with <em>7 years</em> of experience.</p>
-    <p>I have <em>permanent residency in Australia</em>, so no work permit is required.</p>
+    <p>I have <em>permanent residency in Australia</em>.</p>
     <p>My qualifications are:</p>
     <ul class="green-bullets">
       <li><strong>HTML5/XHTML</strong> (standards-compliant)</li>
