Updated the CV.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@ layout: two_columns
     <p>My qualifications are:</p>
     <ul class="green-bullets">
       <li><strong>HTML5/XHTML</strong> (standards-compliant)</li>
-      <li><strong>CSS3</strong> and CSS preprocessors (<strong>SASS</strong>, <strong>Compass</strong>)</li>
+      <li><strong>CSS3</strong>, CSS preprocessors (<strong>SASS</strong>, <strong>Compass</strong>) and CSS frameworks (<strong>Bootstrap</strong>, <strong>Foundation</strong>)</li>
       <li><strong>JavaScript</strong> (<strong>jQuery</strong>, jQuery UI, etc.), including <strong>Ajax</strong> techniques and <strong>CoffeeScript</strong></li>
       <li>Server-side <strong>MVC frameworks</strong> (<strong>Django</strong>, <strong>Ruby on Rails</strong>)</li>
-      <li>Test-driven development with <strong>Jasmine</strong></li>
       <li><strong>Git</strong>, <strong>Mercurial</strong>, <strong>SVN</strong></li>
       <li><strong>Agile development</strong> processes and practices</li>
       <li><strong>Adobe Photoshop</strong>, <strong>GIMP</strong></li>
@@ -25,7 +24,7 @@ layout: two_columns
       <li><strong>Semantic coding</strong> most of the time ;)</li>
       <li><strong>Accessibility</strong>, progressive enhancement &amp; graceful degradation</li>
       <li>Designing user interfaces with a focus on <strong>usability</strong></li>
-      <!-- <li>High attention to detail and ability to create pixel-perfect interfaces</li> -->
+      <li>High attention to detail and ability to create pixel-perfect interfaces</li>
     </ul>
     <p class="bigger">Please feel free to contact me:</p>
     {% include contact_list.html %}
